--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,17 @@
 				<version>1.2.3</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>com.library</groupId>
+				<artifactId>library-model</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.library</groupId>
+				<artifactId>library-model</artifactId>
+				<version>${project.version}</version>
+				<type>test-jar</type>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -133,6 +144,7 @@
 	</dependencies>
 
 	<modules>
-		<module>library-module</module>
+		<module>library-model</module>
+		<module>library-resource</module>
 	</modules>
 </project>
