Integration tests library creation.

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,17 @@
 				<version>${project.version}</version>
 				<type>test-jar</type>
 			</dependency>
+			<dependency>
+				<groupId>com.library</groupId>
+				<artifactId>library-resource</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.library</groupId>
+				<artifactId>library-resource</artifactId>
+				<version>${project.version}</version>
+				<type>test-jar</type>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -146,5 +157,6 @@
 	<modules>
 		<module>library-model</module>
 		<module>library-resource</module>
+		<module>library-int-tests</module>
 	</modules>
 </project>
